--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "webpack-dev-middleware": "^1.12.0",
     "sass-loader": "^6.0.6",
     "node-sass": "^4.6.0",
-    "moment": "^2.19.1"
+    "mongoose": "^4.13.1"
   },
   "engines": {
     "node": "8.x"
