--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "webpack-dev-middleware": "^1.12.0",
     "sass-loader": "^6.0.6",
     "node-sass": "^4.6.0",
-    "mongoose": "^4.13.1"
+    "mongoose": "^4.13.1",
+    "valid-url": "^1.0.9"
   },
   "engines": {
     "node": "8.x"
